# openaiworkshop

./: RESTART.md
.github/: copilot-instructions.md
.github/workflows/: integration-tests.yml  orchestrate.yml  promote-to-main.yml
agentic_ai/agents/agent_framework/: single_agent.py
agentic_ai/agents/agent_framework/multi_agent/: handoff_multi_domain_agent.py  magentic_group.py  reflection_agent.py
agentic_ai/agents/mcp_agent_demo/: README.md  mcp_client_agent.py  mcp_client_hybrid.py  mcp_client_stateful.py  mcp_server.py  mcp_server_hybrid.py  mcp_server_langgraph.py  mcp_server_stateful.py  pyproject.toml  workflow_group_chat.py
agentic_ai/applications/: backend.py  pyproject.toml  requirements.txt
agentic_ai/applications/react-frontend/src/: App.jsx
agentic_ai/applications/react-frontend/src/components/: AgentEvent.jsx  AgentSelector.jsx  AppHeader.jsx  ChatInput.jsx  ChatMessage.jsx  InternalProcessDrawer.jsx
agentic_ai/applications/react-frontend/src/theme/: index.js
agentic_ai/evaluations/: run_agent_eval.py
agentic_ai/workflow/fraud_detection_durable/: pyproject.toml
mcp/: _backend_cosmos.py  mcp_service_agentic.py  pyproject.toml
tests/: test_agent_framework_rc1_regression.py
