[project]
name = "mcp-service-aoai-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cosmos==4.9.0",
    "azure-identity>=1.19.0",
    "faker==26.0.0",
    "fastapi==0.116.1",
    "fastmcp==3.0.2",
    "flasgger==0.9.7.1",
    "flask==3.1.2",
    "openai>=2.5.0",
    "pyjwt[crypto]==2.10.1",
    "python-dotenv==1.1.0",
    "tenacity==8.5.0",
    "tiktoken>=0.11.0",
]
